--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+* Mon Jun 25 2012 Jan Vansteenkiste <jan.vansteenkiste@unifiedpost.com>
+- Pakiti 2.1.4-2 release
+- no more php short tags
+- include cve information in host listing
+- fix regex for parsing Red Hat release version
+
 * Thu Sep 16 2010 Michal Prochazka <michalp@ics.muni.cz>
 - Pakiti 2.1.4 release
 - bug fixes
